--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,9 @@ dependencies {
     implementation('org.hibernate:hibernate-core:6.3.1.Final')
     implementation('org.glassfish.jaxb:jaxb-runtime:4.0.3')
 
+    implementation 'org.mariadb.jdbc:mariadb-java-client:3.4.1'
+
+
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 }
